解决执行部分命令时阻塞的问题,命令执行的 结果可以在日志中查看了,配置了日志文件输出