@@ -1,10 +1,15 @@
 package com.jgduhao.clickexec.service.impl;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.TimeUnit;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -17,6 +22,8 @@ import com.jgduhao.clickexec.service.BashScriptService;
 
 @Service
 public class BashScriptServiceImpl implements BashScriptService {
+	
+	private Log log = LogFactory.getLog(BashScriptServiceImpl.class);
 	
 	@Autowired
 	private BashScriptDao bashScriptDao;
@@ -64,13 +71,40 @@ public class BashScriptServiceImpl implements BashScriptService {
 	private int runCommand(String cmd) {
 		String[] cmds = {"/bin/sh", "-c", cmd};
 		try {
-			Process process = Runtime.getRuntime().exec(cmds);
-			int status = process.waitFor();
+			ProcessBuilder pbuilder = new ProcessBuilder(cmds);
+			pbuilder.redirectErrorStream(true);  
+			final Process process = pbuilder.start();
+			
+			Thread outputThread = new Thread(() -> {
+				try(BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));){
+					String line = "";
+					while(!Thread.currentThread().isInterrupted() && (line = br.readLine()) != null) {
+						log.info(line);
+					}
+				} catch(IOException e) {
+					log.error(e);
+				}
+				log.info("output end");
+			});
+			outputThread.start();
+			
+			boolean waitStatus = process.waitFor(50, TimeUnit.SECONDS);
+			int status = -999;
+			if(waitStatus) {
+				status = process.waitFor();
+			}
+			outputThread.interrupt();
+			if(process.isAlive()) {
+				process.destroy();
+			}
+			if(!waitStatus) {
+				throw new BashScriptException(ScriptError.ScriptExecuteTimeout);
+			}
 			return status;
 		} catch (IOException e) {
-			e.printStackTrace();
+			log.error(e);
 		} catch (InterruptedException e) {
-			e.printStackTrace();
+			log.error(e);
 		}
 		return ScriptConsts.SCRIPT_EXECUTE_OTHER_ERR;
 	}
